QCADOOCLS-5986,QCADOOCLS-5989